portfolio views completed

--- a/portfolio_views/individual_portfolio.html
+++ b/portfolio_views/individual_portfolio.html
@@ -123,8 +123,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="experience-item">
-                    <img src="images/Company Logo.png" alt="Company Logo" class="company-logo">
+                <div class="experience-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Company Logo" class="org-image-small">
                     <div class="experience-details">
                         <h3>Full-stack Developer</h3>
                         <p class="company-name">Autovance Integrated Services · Freelance</p>
@@ -142,8 +142,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="education-item">
-                    <img src="images/corporate_education.png" alt="School Logo" class="school-logo">
+                <div class="education-item flex-org-image">
+                    <img src="images/corporate_education.png" alt="School Logo" class="org-image-small">
                     <div class="education-details">
                         <h3>African Leadership Experience</h3>
                         <p class="degree">Certificate, Artificial intelligence</p>
@@ -161,8 +161,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="showcase-item">
-                    <img src="images/Company Logo.png" alt="Project Image" class="showcase-image">
+                <div class="showcase-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Project Image" class="org-image-small">
                     <div class="showcase-details">
                         <h3>Project Title</h3>
                         <p class="client">Client/Organization/Personal</p>
@@ -182,8 +182,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="license-item">
-                    <img src="images/Company Logo.png" alt="License Logo" class="license-logo">
+                <div class="license-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="License Logo" class="org-image-small">
                     <div class="license-details">
                         <h3>AWS Educate Introduction to Cloud 101</h3>
                         <p class="issuer">Amazon Web Services (AWS)</p>
@@ -192,8 +192,8 @@
                         <button class="show-credential-btn">Show credential</button>
                     </div>
                 </div>
-                <div class="license-item">
-                    <img src="images/Company Logo.png" alt="License Logo" class="license-logo">
+                <div class="license-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="License Logo" class="org-image-small">
                     <div class="license-details">
                         <h3>Python Certification</h3>
                         <p class="issuer">Kaggle</p>
@@ -214,8 +214,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="award-item">
-                    <img src="images/Company Logo.png" alt="Award Logo" class="award-logo">
+                <div class="award-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Award Logo" class="org-image-small">
                     <div class="award-details">
                         <h3>Best Developer Award</h3>
                         <p class="awarding-body">Tech Innovation Forum</p>
@@ -234,8 +234,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="affiliation-item">
-                    <img src="images/Company Logo.png" alt="Organization Logo" class="affiliation-logo">
+                <div class="affiliation-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Organization Logo" class="org-image-small">
                     <div class="affiliation-details">
                         <h3>Memberships in industry bodies or associations</h3>
                         <p class="roles">Roles held (if any)</p>
@@ -252,8 +252,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="volunteer-item">
-                    <img src="images/Company Logo.png" alt="Organization Logo" class="volunteer-logo">
+                <div class="volunteer-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Organization Logo" class="org-image-small">
                     <div class="volunteer-details">
                         <h3>Tech Education Initiative</h3>
                         <p class="role">Mentor</p>
@@ -315,8 +315,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="testimonial-item">
-                    <img src="images/Company Logo.png" alt="Person" class="testimonial-avatar">
+                <div class="testimonial-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Person" class="org-image-small">
                     <div class="testimonial-details">
                         <p class="quote">"David is an exceptional developer with great attention to detail."</p>
                         <p class="author">John Doe, CEO at Tech Solutions</p>
@@ -333,8 +333,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="publication-item">
-                    <img src="images/Company Logo.png" alt="Publication" class="publication-image">
+                <div class="publication-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Publication" class="org-image-small">
                     <div class="publication-details">
                         <h3>The Future of AI in Web Development</h3>
                         <p class="author">David James</p>
@@ -354,8 +354,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="activity-item">
-                    <img src="images/Company Logo.png" alt="Activity" class="activity-image">
+                <div class="activity-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Activity" class="org-image-small">
                     <div class="activity-details">
                         <h3>Tech Community Organizer</h3>
                         <p class="responsibility">Lead Organizer</p>
@@ -374,8 +374,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="contact-info">
-                    <img src="images/Company Logo.png" alt="Contact" class="contact-image">
+                <div class="contact-info flex-org-image">
+                    <img src="images/Company Logo.png" alt="Contact" class="org-image-small">
                     <div class="contact-details">
                         <p class="name">David James</p>
                         <p class="email">david@example.com</p>
@@ -395,8 +395,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="appendix-item">
-                    <img src="images/Company Logo.png" alt="Appendix" class="appendix-image">
+                <div class="appendix-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Appendix" class="org-image-small">
                     <div class="appendix-details">
                         <p class="item">Resume</p>
                         <p class="item">Project timelines</p>
@@ -420,8 +420,8 @@
                     <button>Schools</button>
                 </div>
                 <div class="interest-items">
-                    <div class="interest-item">
-                        <img src="images/Company Logo.png" alt="Top Voice" class="interest-avatar">
+                    <div class="interest-item flex-org-image">
+                        <img src="images/Company Logo.png" alt="Top Voice" class="org-image-small">
                         <div class="interest-details">
                             <h3>David J. Malan</h3>
                             <p class="description">Professor of Computer Science at Harvard</p>
@@ -429,8 +429,8 @@
                             <button class="following-btn"><i class="fas fa-check"></i> Following</button>
                         </div>
                     </div>
-                    <div class="interest-item">
-                        <img src="images/Company Logo.png" alt="Top Voice" class="interest-avatar">
+                    <div class="interest-item flex-org-image">
+                        <img src="images/Company Logo.png" alt="Top Voice" class="org-image-small">
                         <div class="interest-details">
                             <h3>Satya Nadella</h3>
                             <p class="description">CEO at Microsoft</p>
@@ -531,7 +531,6 @@
     </div>
 
     <!-- Modals will be inserted here by JavaScript -->
-    <script src="script.js"></script>
     <script src="js/individual_portfolio.js"></script>
     
 
