--- a/portfolio_views/individual_profile.html
+++ b/portfolio_views/individual_profile.html
@@ -123,12 +123,13 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="experience-item">
-                    <img src="images/Company Logo.png" alt="Company Logo" class="company-logo">
+                <div class="experience-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
                     <div class="experience-details">
-                        <h3>Full-stack Developer</h3>
-                        <p class="company-name">Autovance Integrated Services · Freelance</p>
-                        <p class="duration">Feb 2024 - Present · 1 yr 5 mos</p>
+                        <h3>Software Engineer</h3>
+                        <p class="company">Tech Company</p>
+                        <p class="duration">2020 - Present</p>
+                        <p class="description">Developed web applications using modern technologies</p>
                     </div>
                 </div>
             </div>
@@ -142,8 +143,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="education-item">
-                    <img src="images/corporate_education.png" alt="School Logo" class="school-logo">
+                <div class="education-item flex-org-image">
+                    <img src="images/corporate_education.png" alt="Organization" class="org-image-small">
                     <div class="education-details">
                         <h3>African Leadership Experience</h3>
                         <p class="degree">Certificate, Artificial intelligence</p>
@@ -162,8 +163,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="license-item">
-                    <img src="images/Company Logo.png" alt="License Logo" class="license-logo">
+                <div class="license-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
                     <div class="license-details">
                         <h3>AWS Educate Introduction to Cloud 101</h3>
                         <p class="issuer">Amazon Web Services (AWS)</p>
@@ -172,8 +173,8 @@
                         <button class="show-credential-btn">Show credential</button>
                     </div>
                 </div>
-                <div class="license-item">
-                    <img src="images/Company Logo.png" alt="License Logo" class="license-logo">
+                <div class="license-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
                     <div class="license-details">
                         <h3>Python Certification</h3>
                         <p class="issuer">Kaggle</p>
@@ -196,8 +197,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="affiliation-item">
-                    <img src="images/Company Logo.png" alt="Organization Logo" class="affiliation-logo">
+                <div class="affiliation-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
                     <div class="affiliation-details">
                         <h3>Memberships in industry bodies or associations</h3>
                         <p class="roles">Roles held (if any)</p>
@@ -214,8 +215,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="volunteer-item">
-                    <img src="images/Company Logo.png" alt="Organization Logo" class="volunteer-logo">
+                <div class="volunteer-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
                     <div class="volunteer-details">
                         <h3>Tech Education Initiative</h3>
                         <p class="role">Mentor</p>
@@ -283,8 +284,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="contact-info">
-                    <img src="images/Company Logo.png" alt="Contact" class="contact-image">
+                <div class="contact-info flex-org-image">
+                    <img src="images/Company Logo.png" alt="Contact" class="org-image-small">
                     <div class="contact-details">
                         <p class="name">David James</p>
                         <p class="email">david@example.com</p>
@@ -305,8 +306,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="reference-item">
-                    <img src="images/Company Logo.png" alt="Reference" class="reference-avatar">
+                <div class="reference-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Reference" class="org-image-small">
                     <div class="reference-details">
                         <p>Include contact details with permission</p>
                     </div>
@@ -328,8 +329,8 @@
                     <button>Schools</button>
                 </div>
                 <div class="interest-items">
-                    <div class="interest-item">
-                        <img src="images/Company Logo.png" alt="Top Voice" class="interest-avatar">
+                    <div class="interest-item flex-org-image">
+                        <img src="images/Company Logo.png" alt="Top Voice" class="org-image-small">
                         <div class="interest-details">
                             <h3>David J. Malan</h3>
                             <p class="description">Professor of Computer Science at Harvard</p>
@@ -337,8 +338,8 @@
                             <button class="following-btn"><i class="fas fa-check"></i> Following</button>
                         </div>
                     </div>
-                    <div class="interest-item">
-                        <img src="images/Company Logo.png" alt="Top Voice" class="interest-avatar">
+                    <div class="interest-item flex-org-image">
+                        <img src="images/Company Logo.png" alt="Top Voice" class="org-image-small">
                         <div class="interest-details">
                             <h3>Satya Nadella</h3>
                             <p class="description">CEO at Microsoft</p>
@@ -441,8 +442,7 @@
     <div id="modalContainer"></div>
 
     <!-- Modals will be inserted here by JavaScript -->
-    <script src="script.js"></script>
-    <script src="js/individual_portfolio.js"></script>
+    <script src="js/individual_profile.js"></script>
     
 
    
