--- a/portfolio_views/private_corporate_portfolio.html
+++ b/portfolio_views/private_corporate_portfolio.html
@@ -124,8 +124,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="corporate-snapshot-item">
-        <img src="images/Company Logo.png" alt="Company" class="corporate-snapshot-image">
+    <div class="corporate-snapshot-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Company" class="org-image-small">
         <div class="corporate-snapshot-details">
             <h3>Company Overview</h3>
             <p class="vision-mission">Vision, Mission & Core Competencies</p>
@@ -143,11 +143,14 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="core-services-content">
-        <p>Description of main services or areas of expertise</p>
-        <p>Technical or specialized skills</p>
-        <p>Tools, platforms, or methodologies used</p>
-        <p>Industry focus or sector-specific capabilities</p>
+    <div class="core-services-content flex-org-image">
+        <img src="images/Company Logo.png" alt="Core Services" class="org-image-small">
+        <div>
+            <p>Description of main services or areas of expertise</p>
+            <p>Technical or specialized skills</p>
+            <p>Tools, platforms, or methodologies used</p>
+            <p>Industry focus or sector-specific capabilities</p>
+        </div>
     </div>
 </div>
 
@@ -160,8 +163,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="portfolio-item">
-        <img src="images/Company Logo.png" alt="Project" class="portfolio-image">
+    <div class="portfolio-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Project" class="org-image-small">
         <div class="portfolio-details">
             <h3>Project Title</h3>
             <p class="client">Client Name</p>
@@ -181,8 +184,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="team-expertise-item">
-        <img src="images/Company Logo.png" alt="Team" class="team-expertise-image">
+    <div class="team-expertise-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Team" class="org-image-small">
         <div class="team-expertise-details">
             <h3>Profile of Key Personnel</h3>
             <p class="certifications">Certifications and qualifications</p>
@@ -200,8 +203,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="client-item">
-        <img src="images/Company Logo.png" alt="Client" class="client-image">
+    <div class="client-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Client" class="org-image-small">
         <div class="client-details">
             <h3>Name of Notable client</h3>
             <p class="testimonials">Testimonials</p>
@@ -209,8 +212,8 @@
             <button class="show-testimonials-btn"><i class="fas fa-comment"></i> Show Testimonials</button>
         </div>
     </div>
-    <div class="client-item">
-        <img src="images/Company Logo.png" alt="Client" class="client-image">
+    <div class="client-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Client" class="org-image-small">
         <div class="client-details">
             <h3>Name of Notable client</h3>
             <p class="testimonials">Testimonials</p>
@@ -230,8 +233,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="award-item">
-        <img src="images/Company Logo.png" alt="Award" class="award-image">
+    <div class="award-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Award" class="org-image-small">
         <div class="award-details">
             <h3>Key Accomplishments / Major Project Completed</h3>
             <p class="awards">Awards & Certifications</p>
@@ -241,8 +244,8 @@
             <button class="show-credential-btn"><i class="fas fa-certificate"></i> Show credential</button>
         </div>
     </div>
-    <div class="award-item">
-        <img src="images/Company Logo.png" alt="Award" class="award-image">
+    <div class="award-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Award" class="org-image-small">
         <div class="award-details">
             <h3>Key Accomplishments / Major Project Completed</h3>
             <p class="awards">Awards & Certifications</p>
@@ -264,8 +267,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="tools-item">
-        <img src="images/Company Logo.png" alt="Tools" class="tools-image">
+    <div class="tools-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Tools" class="org-image-small">
         <div class="tools-details">
             <h3>Software / tools regularly used</h3>
             <p class="processes">Proprietary processes or innovation approaches</p>
@@ -331,8 +334,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="testimonial-item">
-        <img src="images/Company Logo.png" alt="Testimonial" class="testimonial-image">
+    <div class="testimonial-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Testimonial" class="org-image-small">
         <div class="testimonial-details">
             <p class="quote">"Quotes from satisfied clients"</p>
             <p class="reference">Content or reference to the project they relate to</p>
@@ -350,8 +353,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="publication-item">
-        <img src="images/Company Logo.png" alt="Publication" class="publication-image">
+    <div class="publication-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Publication" class="org-image-small">
         <div class="publication-details">
             <h3>Title</h3>
             <p class="author">Author</p>
@@ -371,8 +374,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="contact-links-item">
-        <img src="images/Company Logo.png" alt="Contact" class="contact-links-image">
+    <div class="contact-links-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Contact" class="org-image-small">
         <div class="contact-links-details">
             <h3>Corporate Data</h3>
             <p class="name">Name</p>
@@ -393,8 +396,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="appendices-item">
-        <img src="images/Company Logo.png" alt="Appendices" class="appendices-image">
+    <div class="appendices-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Appendices" class="org-image-small">
         <div class="appendices-details">
             <p class="item">Press Mentions</p>
             <p class="item">Whitepapers or Brochures</p>
@@ -419,8 +422,8 @@
                     <button>Schools</button>
                 </div>
                 <div class="interest-items">
-                    <div class="interest-item">
-                        <img src="images/Company Logo.png" alt="Top Voice" class="interest-avatar">
+                    <div class="interest-item flex-org-image">
+                        <img src="images/Company Logo.png" alt="Top Voice" class="org-image-small">
                         <div class="interest-details">
                             <h3>David J. Malan</h3>
                             <p class="description">Professor of Computer Science at Harvard</p>
@@ -428,8 +431,8 @@
                             <button class="following-btn"><i class="fas fa-check"></i> Following</button>
                         </div>
                     </div>
-                    <div class="interest-item">
-                        <img src="images/Company Logo.png" alt="Top Voice" class="interest-avatar">
+                    <div class="interest-item flex-org-image">
+                        <img src="images/Company Logo.png" alt="Top Voice" class="org-image-small">
                         <div class="interest-details">
                             <h3>Satya Nadella</h3>
                             <p class="description">CEO at Microsoft</p>
@@ -530,8 +533,7 @@
     </div>
 
     <!-- Modals will be inserted here by JavaScript -->
-    <script src="script.js"></script>
-    <script src="js/individual_portfolio.js"></script>
+    <script src="js/private_corporate_portfolio.js"></script>
     
 
    
