--- a/portfolio_views/private_corporate_profile.html
+++ b/portfolio_views/private_corporate_profile.html
@@ -126,12 +126,12 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="corporate-item">
-                    <img src="images/Company Logo.png" alt="Company Logo" class="corporate-logo">
-                    <div class="corporate-details">
-                        <p>Legal Name & Business Registration Info</p>
-                        <p>Corporate / Business Type</p>
-                        <p>Year Established</p>
+                <div class="corporate-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
+                    <div class="corporate-overview-details">
+                        <h3>Legal Name & Business Registration Info</h3>
+                        <p class="business-type">Corporate / Business Type</p>
+                        <p class="year-established">Year Established</p>
                     </div>
                 </div>
             </div>
@@ -161,8 +161,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="product-item">
-                    <img src="images/Company Logo.png" alt="Products" class="product-logo">
+                <div class="product-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
                     <div class="product-details">
                         <p>Description of key products and/or service offerings</p>
                         <p>Features and benefits</p>
@@ -180,8 +180,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="org-item">
-                    <img src="images/Company Logo.png" alt="Org Structure" class="org-logo">
+                <div class="org-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
                     <div class="org-details">
                         <p>Management Team / Leadership Bios</p>
                         <p>Company Hierarchy/ or Organizational Chart</p>
@@ -200,16 +200,16 @@
                     </div>
                 </div>
                 <div class="market-items">
-                    <div class="market-item">
-                        <img src="images/Company Logo.png" alt="Market" class="market-logo">
+                    <div class="market-item flex-org-image">
+                        <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
                         <div class="market-details">
                             <p>Target Market/ Industry Sector</p>
                             <p>Notable Clients or Partners</p>
                             <p>Descriptions</p>
                         </div>
                     </div>
-                    <div class="market-item">
-                        <img src="images/Company Logo.png" alt="Market" class="market-logo">
+                    <div class="market-item flex-org-image">
+                        <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
                         <div class="market-details">
                             <p>Target Market/ Industry Sector</p>
                             <p>Notable Clients or Partners</p>
@@ -230,8 +230,8 @@
                     </div>
                 </div>
                 <div class="achievement-items">
-                    <div class="achievement-item">
-                        <img src="images/Company Logo.png" alt="Achievement" class="achievement-logo">
+                    <div class="achievement-item flex-org-image">
+                        <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
                         <div class="achievement-details">
                             <p>Key Accomplishments / Major Project Completed</p>
                             <p>Awards & Certifications</p>
@@ -241,8 +241,8 @@
                         </div>
                         <button class="show-credential-btn">Show credential</button>
                     </div>
-                    <div class="achievement-item">
-                        <img src="images/Company Logo.png" alt="Achievement" class="achievement-logo">
+                    <div class="achievement-item flex-org-image">
+                        <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
                         <div class="achievement-details">
                             <p>Key Accomplishments / Major Project Completed</p>
                             <p>Awards & Certifications</p>
@@ -265,8 +265,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="csr-item">
-                    <img src="images/Company Logo.png" alt="CSR" class="csr-logo">
+                <div class="csr-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
                     <div class="csr-details">
                         <p>Environmental Sustainability Efforts</p>
                         <p>Community Engagement</p>
@@ -286,8 +286,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="contact-item">
-                    <img src="images/Company Logo.png" alt="Contact" class="contact-logo">
+                <div class="contact-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
                     <div class="contact-details">
                         <p>Corporate Data</p>
                         <p>Name</p>
@@ -308,8 +308,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="appendix-item">
-                    <img src="images/Company Logo.png" alt="Appendix" class="appendix-logo">
+                <div class="appendix-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
                     <div class="appendix-details">
                         <p>Brochure</p>
                         <p>Licenses</p>
@@ -330,8 +330,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="contact-info">
-                    <img src="images/Company Logo.png" alt="Contact" class="contact-image">
+                <div class="contact-info flex-org-image">
+                    <img src="images/Company Logo.png" alt="Contact" class="org-image-small">
                     <div class="contact-details">
                         <p class="name">David James</p>
                         <p class="email">david@example.com</p>
@@ -351,8 +351,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="appendix-item">
-                    <img src="images/Company Logo.png" alt="Appendix" class="appendix-image">
+                <div class="appendix-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
                     <div class="appendix-details">
                         <p class="item">Resume</p>
                         <p class="item">Project timelines</p>
@@ -376,8 +376,8 @@
                     <button>Schools</button>
                 </div>
                 <div class="interest-items">
-                    <div class="interest-item">
-                        <img src="images/Company Logo.png" alt="Top Voice" class="interest-avatar">
+                    <div class="interest-item flex-org-image">
+                        <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
                         <div class="interest-details">
                             <h3>David J. Malan</h3>
                             <p class="description">Professor of Computer Science at Harvard</p>
@@ -385,8 +385,8 @@
                             <button class="following-btn"><i class="fas fa-check"></i> Following</button>
                         </div>
                     </div>
-                    <div class="interest-item">
-                        <img src="images/Company Logo.png" alt="Top Voice" class="interest-avatar">
+                    <div class="interest-item flex-org-image">
+                        <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
                         <div class="interest-details">
                             <h3>Satya Nadella</h3>
                             <p class="description">CEO at Microsoft</p>
@@ -487,8 +487,7 @@
     </div>
 
     <!-- Modals will be inserted here by JavaScript -->
-    <script src="script.js"></script>
-    <script src="js/individual_portfolio.js"></script>
+    <script src="js/private_corporate_profile.js"></script>
     
 
    
