--- a/portfolio_views/public_corporate_portfolio.html
+++ b/portfolio_views/public_corporate_portfolio.html
@@ -125,8 +125,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="award-item">
-                    <img src="images/Company Logo.png" alt="Award Logo" class="award-logo">
+                <div class="award-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Award Logo" class="org-image-small">
                     <div class="award-details">
                         <h3>Best Developer Award</h3>
                         <p class="awarding-body">Tech Innovation Forum</p>
@@ -145,8 +145,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="introduction-item">
-        <img src="images/Company Logo.png" alt="Executive" class="introduction-image">
+    <div class="introduction-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Executive" class="org-image-small">
         <div class="introduction-details">
             <h3>Message from the head of the organization</h3>
             <p class="description">Brief description of the portfolio's purpose</p>
@@ -164,8 +164,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="org-overview-item">
-        <img src="images/Company Logo.png" alt="Organization" class="org-overview-image">
+    <div class="org-overview-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
         <div class="org-overview-details">
             <h3>Full Name and Acronym</h3>
             <p class="mandate">Mandate and Mission</p>
@@ -184,8 +184,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="strategic-focus-item">
-        <img src="images/Company Logo.png" alt="Strategic Focus" class="strategic-focus-image">
+    <div class="strategic-focus-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Strategic Focus" class="org-image-small">
         <div class="strategic-focus-details">
             <h3>Core thematic or operational areas</h3>
             <p class="goals">Goals and objectives for each area</p>
@@ -203,8 +203,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="portfolio-projects-item">
-        <img src="images/Company Logo.png" alt="Project" class="portfolio-projects-image">
+    <div class="portfolio-projects-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Project" class="org-image-small">
         <div class="portfolio-projects-details">
             <h3>Project Title</h3>
             <p class="department">Implementing Department/Unit</p>
@@ -229,8 +229,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="performance-highlights-item">
-        <img src="images/Company Logo.png" alt="Performance" class="performance-highlights-image">
+    <div class="performance-highlights-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Performance" class="org-image-small">
         <div class="performance-highlights-details">
             <h3>Summary of measurable results</h3>
             <p class="indicators">Indicators and targets achieved</p>
@@ -250,8 +250,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="collaborations-item">
-        <img src="images/Company Logo.png" alt="Collaborations" class="collaborations-image">
+    <div class="collaborations-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Collaborations" class="org-image-small">
         <div class="collaborations-details">
             <h3>National, regional, and international partners</h3>
             <p class="donor">Donor-funded initiatives</p>
@@ -269,8 +269,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="mel-item">
-        <img src="images/Company Logo.png" alt="MEL" class="mel-image">
+    <div class="mel-item flex-org-image">
+        <img src="images/Company Logo.png" alt="MEL" class="org-image-small">
         <div class="mel-details">
             <h3>Overview of monitoring frameworks</h3>
             <p class="evaluation">Evaluation processes and impact assessment methods</p>
@@ -288,8 +288,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="challenges-item">
-        <img src="images/Company Logo.png" alt="Challenges" class="challenges-image">
+    <div class="challenges-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Challenges" class="org-image-small">
         <div class="challenges-details">
             <h3>Operational, financial, or political challenges</h3>
             <p class="mitigation">Response and mitigation mechanisms</p>
@@ -306,8 +306,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="award-certification-item">
-        <img src="images/Company Logo.png" alt="Award" class="award-certification-image">
+    <div class="award-certification-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Award" class="org-image-small">
         <div class="award-certification-details">
             <h3>Key Accomplishments / Major Project Completed</h3>
             <p class="award-name">Awards & Certifications</p>
@@ -317,8 +317,8 @@
             <button class="show-credential-btn">Show credential</button>
         </div>
     </div>
-    <div class="award-certification-item">
-        <img src="images/Company Logo.png" alt="Award" class="award-certification-image">
+    <div class="award-certification-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Award" class="org-image-small">
         <div class="award-certification-details">
             <h3>Key Accomplishments / Major Project Completed</h3>
             <p class="award-name">Awards & Certifications</p>
@@ -340,8 +340,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="outlook-item">
-        <img src="images/Company Logo.png" alt="Outlook" class="outlook-image">
+    <div class="outlook-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Outlook" class="org-image-small">
         <div class="outlook-details">
             <h3>Future projects in the pipeline</h3>
             <p class="policy">Policy reform efforts or expansion plans</p>
@@ -374,8 +374,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="testimonial-item">
-        <img src="images/Company Logo.png" alt="Testimonial" class="testimonial-image">
+    <div class="testimonial-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Testimonial" class="org-image-small">
         <div class="testimonial-details">
             <p class="quote">"Quotes or feedback from beneficiaries or partners"</p>
             <p class="reference">Content or reference to the project they relate to</p>
@@ -393,8 +393,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="testimonial-item">
-                    <img src="images/Company Logo.png" alt="Person" class="testimonial-avatar">
+                <div class="testimonial-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Person" class="org-image-small">
                     <div class="testimonial-details">
                         <p class="quote">"David is an exceptional developer with great attention to detail."</p>
                         <p class="author">John Doe, CEO at Tech Solutions</p>
@@ -411,8 +411,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="publication-item">
-                    <img src="images/Company Logo.png" alt="Publication" class="publication-image">
+                <div class="publication-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Publication" class="org-image-small">
                     <div class="publication-details">
                         <h3>The Future of AI in Web Development</h3>
                         <p class="author">David James</p>
@@ -432,8 +432,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="activity-item">
-                    <img src="images/Company Logo.png" alt="Activity" class="activity-image">
+                <div class="activity-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Activity" class="org-image-small">
                     <div class="activity-details">
                         <h3>Tech Community Organizer</h3>
                         <p class="responsibility">Lead Organizer</p>
@@ -453,7 +453,7 @@
                     </div>
                 </div>
                 <div class="contact-info">
-                    <img src="images/Company Logo.png" alt="Contact" class="contact-image">
+                    <img src="images/Company Logo.png" alt="Contact" class="org-image-small">
                     <div class="contact-details">
                         <p class="name">David James</p>
                         <p class="email">david@example.com</p>
@@ -473,8 +473,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="appendix-item">
-                    <img src="images/Company Logo.png" alt="Appendix" class="appendix-image">
+                <div class="appendix-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Appendix" class="org-image-small">
                     <div class="appendix-details">
                         <p class="item">Resume</p>
                         <p class="item">Project timelines</p>
@@ -498,8 +498,8 @@
                     <button>Schools</button>
                 </div>
                 <div class="interest-items">
-                    <div class="interest-item">
-                        <img src="images/Company Logo.png" alt="Top Voice" class="interest-avatar">
+                    <div class="interest-item flex-org-image">
+                        <img src="images/Company Logo.png" alt="Top Voice" class="org-image-small">
                         <div class="interest-details">
                             <h3>David J. Malan</h3>
                             <p class="description">Professor of Computer Science at Harvard</p>
@@ -507,8 +507,8 @@
                             <button class="following-btn"><i class="fas fa-check"></i> Following</button>
                         </div>
                     </div>
-                    <div class="interest-item">
-                        <img src="images/Company Logo.png" alt="Top Voice" class="interest-avatar">
+                    <div class="interest-item flex-org-image">
+                        <img src="images/Company Logo.png" alt="Top Voice" class="org-image-small">
                         <div class="interest-details">
                             <h3>Satya Nadella</h3>
                             <p class="description">CEO at Microsoft</p>
@@ -609,8 +609,7 @@
     </div>
 
     <!-- Modals will be inserted here by JavaScript -->
-    <script src="script.js"></script>
-    <script src="js/public_cp.js"></script>
+    <script src="js/public_corporate_portfolio.js"></script>
     
 
    
