--- a/portfolio_views/public_corporate_profile.html
+++ b/portfolio_views/public_corporate_profile.html
@@ -125,8 +125,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="corporate-overview-item">
-        <img src="images/Company Logo.png" alt="Organization" class="corporate-overview-image">
+    <div class="corporate-overview-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
         <div class="corporate-overview-details">
             <h3>Legal Name & Business Registration Info</h3>
             <p class="business-type">Corporate / Business Type</p>
@@ -160,8 +160,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="products-services-item">
-        <img src="images/Company Logo.png" alt="Products" class="products-services-image">
+    <div class="products-services-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Products" class="org-image-small">
         <div class="products-services-details">
             <h3>Description of key products and/or service offerings</h3>
             <p class="features">Features and benefits</p>
@@ -179,8 +179,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="org-structure-item">
-        <img src="images/Company Logo.png" alt="Structure" class="org-structure-image">
+    <div class="org-structure-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Structure" class="org-image-small">
         <div class="org-structure-details">
             <h3>Management Team / Leadership Bios</h3>
             <p class="chart">Company Hierarchy/ or Organizational Chart</p>
@@ -200,16 +200,16 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="market-client-item">
-        <img src="images/Company Logo.png" alt="Market" class="market-client-image">
+    <div class="market-client-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Market" class="org-image-small">
         <div class="market-client-details">
             <h3>Target Market/ Industry Sector</h3>
             <p class="clients">Notable Clients or Partners</p>
             <p class="description">Descriptions</p>
         </div>
     </div>
-    <div class="market-client-item">
-        <img src="images/Company Logo.png" alt="Market" class="market-client-image">
+    <div class="market-client-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Market" class="org-image-small">
         <div class="market-client-details">
             <h3>Target Market/ Industry Sector</h3>
             <p class="clients">Notable Clients or Partners</p>
@@ -228,8 +228,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="achievement-item">
-        <img src="images/Company Logo.png" alt="Achievement" class="achievement-image">
+    <div class="achievement-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Achievement" class="org-image-small">
         <div class="achievement-details">
             <h3>Key Accomplishments / Major Project Completed</h3>
             <p class="awards">Awards & Certifications</p>
@@ -239,8 +239,8 @@
             <button class="show-credential-btn"><i class="fas fa-certificate"></i> Show credential</button>
         </div>
     </div>
-    <div class="achievement-item">
-        <img src="images/Company Logo.png" alt="Achievement" class="achievement-image">
+    <div class="achievement-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Achievement" class="org-image-small">
         <div class="achievement-details">
             <h3>Key Accomplishments / Major Project Completed</h3>
             <p class="awards">Awards & Certifications</p>
@@ -262,8 +262,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="csr-item">
-        <img src="images/Company Logo.png" alt="CSR" class="csr-image">
+    <div class="csr-item flex-org-image">
+        <img src="images/Company Logo.png" alt="CSR" class="org-image-small">
         <div class="csr-details">
             <h3>Environmental Sustainability Efforts</h3>
             <p class="community">Community Engagement</p>
@@ -283,8 +283,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="contact-links-item">
-        <img src="images/Company Logo.png" alt="Contact" class="contact-links-image">
+    <div class="contact-links-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Contact" class="org-image-small">
         <div class="contact-links-details">
             <h3>Corporate Data</h3>
             <p class="name">Name</p>
@@ -305,8 +305,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="appendices-item">
-        <img src="images/Company Logo.png" alt="Appendices" class="appendices-image">
+    <div class="appendices-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Appendices" class="org-image-small">
         <div class="appendices-details">
             <p class="item">Brochure</p>
             <p class="item">Licenses</p>
@@ -326,8 +326,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="org-overview-item">
-        <img src="images/Company Logo.png" alt="Organization" class="org-overview-image">
+    <div class="org-overview-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Organization" class="org-image-small">
         <div class="org-overview-details">
             <h3>Full Name & Acronym</h3>
             <p class="year">Year of Establishment</p>
@@ -362,8 +362,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="org-structure-item">
-        <img src="images/Company Logo.png" alt="Structure" class="org-structure-image">
+    <div class="org-structure-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Structure" class="org-image-small">
         <div class="org-structure-details">
             <h3>Leadership (Director General, Minister, Head, etc)</h3>
             <p class="departments">Key Departments / Units</p>
@@ -385,8 +385,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="functions-mandates-item">
-        <img src="images/Company Logo.png" alt="Functions" class="functions-mandates-image">
+    <div class="functions-mandates-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Functions" class="org-image-small">
         <div class="functions-mandates-details">
             <h3>Primary Responsibilities and Legal Mandates</h3>
             <p class="scope">Scope of Authority (Policy-making, Implementation, Regulation, Service Delivery, etc)</p>
@@ -406,8 +406,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="key-programs-item">
-        <img src="images/Company Logo.png" alt="Programs" class="key-programs-image">
+    <div class="key-programs-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Programs" class="org-image-small">
         <div class="key-programs-details">
             <h3>Ongoing initiatives, Public services, or Policy programs</h3>
             <p class="target">Target Populations or Beneficiaries</p>
@@ -425,8 +425,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="strategic-goals-item">
-        <img src="images/Company Logo.png" alt="Goals" class="strategic-goals-image">
+    <div class="strategic-goals-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Goals" class="org-image-small">
         <div class="strategic-goals-details">
             <h3>Medium-to long-term plans</h3>
             <p class="alignment">Alignment with National Development Frameworks, SDGs, etc</p>
@@ -444,8 +444,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="achievement-item">
-        <img src="images/Company Logo.png" alt="Achievement" class="achievement-image">
+    <div class="achievement-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Achievement" class="org-image-small">
         <div class="achievement-details">
             <h3>Key Accomplishments in Recent Years</h3>
             <p class="awards">Awards & Certifications</p>
@@ -455,8 +455,8 @@
             <button class="show-credential-btn"><i class="fas fa-certificate"></i> Show credential</button>
         </div>
     </div>
-    <div class="achievement-item">
-        <img src="images/Company Logo.png" alt="Achievement" class="achievement-image">
+    <div class="achievement-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Achievement" class="org-image-small">
         <div class="achievement-details">
             <h3>Key Accomplishments in Recent Years</h3>
             <p class="awards">Awards & Certifications</p>
@@ -478,8 +478,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="budget-funding-item">
-        <img src="images/Company Logo.png" alt="Budget" class="budget-funding-image">
+    <div class="budget-funding-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Budget" class="org-image-small">
         <div class="budget-funding-details">
             <h3>Annual Budget Summary</h3>
             <p class="sources">Sources of Funding</p>
@@ -490,7 +490,7 @@
     <div class="show-report-container">
         <button class="show-report-btn"><i class="fas fa-file-alt"></i> Show report</button>
     </div>
-    <a href="#" class="show-all">Show all CRS <i class="fas fa-arrow-right"></i></a>
+    <a href="#" class="show-all">Show all Budgets <i class="fas fa-arrow-right"></i></a>
 </div>
 
 <!-- Partnerships and Stakeholders Section -->
@@ -502,8 +502,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="partnerships-item">
-        <img src="images/Company Logo.png" alt="Partnerships" class="partnerships-image">
+    <div class="partnerships-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Partnerships" class="org-image-small">
         <div class="partnerships-details">
             <h3>Collaborations with other Government Bodies, NGOs, International Agencies, or Private Sector</h3>
             <p class="engagement">Community Engagement Mechanisms</p>
@@ -522,8 +522,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="policy-framework-item">
-        <img src="images/Company Logo.png" alt="Policy" class="policy-framework-image">
+    <div class="policy-framework-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Policy" class="org-image-small">
         <div class="policy-framework-details">
             <h3>Relevant laws, Regulations, or Policy Documents</h3>
             <p class="oversight">Oversight Mechanisms and Accountability Structures</p>
@@ -564,8 +564,8 @@
             <i class="fas fa-pencil-alt icon-button edit-btn"></i>
         </div>
     </div>
-    <div class="contact-info-item">
-        <img src="images/Company Logo.png" alt="Contact" class="contact-info-image">
+    <div class="contact-info-item flex-org-image">
+        <img src="images/Company Logo.png" alt="Contact" class="org-image-small">
         <div class="contact-info-details">
             <h3>Headquarters Address</h3>
             <p class="offices">Regional Offices</p>
@@ -587,7 +587,7 @@
                     </div>
                 </div>
                 <div class="contact-info">
-                    <img src="images/Company Logo.png" alt="Contact" class="contact-image">
+                    <img src="images/Company Logo.png" alt="Contact" class="org-image-small">
                     <div class="contact-details">
                         <p class="name">David James</p>
                         <p class="email">david@example.com</p>
@@ -607,8 +607,8 @@
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="appendix-item">
-                    <img src="images/Company Logo.png" alt="Appendix" class="appendix-image">
+                <div class="appendix-item flex-org-image">
+                    <img src="images/Company Logo.png" alt="Appendix" class="org-image-small">
                     <div class="appendix-details">
                         <p class="item">Resume</p>
                         <p class="item">Project timelines</p>
@@ -633,7 +633,7 @@
                 </div>
                 <div class="interest-items">
                     <div class="interest-item">
-                        <img src="images/Company Logo.png" alt="Top Voice" class="interest-avatar">
+                        <img src="images/Company Logo.png" alt="Top Voice" class="org-image-small">
                         <div class="interest-details">
                             <h3>David J. Malan</h3>
                             <p class="description">Professor of Computer Science at Harvard</p>
@@ -642,7 +642,7 @@
                         </div>
                     </div>
                     <div class="interest-item">
-                        <img src="images/Company Logo.png" alt="Top Voice" class="interest-avatar">
+                        <img src="images/Company Logo.png" alt="Top Voice" class="org-image-small">
                         <div class="interest-details">
                             <h3>Satya Nadella</h3>
                             <p class="description">CEO at Microsoft</p>
@@ -743,7 +743,6 @@
     </div>
 
     <!-- Modals will be inserted here by JavaScript -->
-    <script src="script.js"></script>
     <script src="js/public_corporate_profile.js"></script>
     
 
