--- a/portfolio_views/public_corporate_profile.html
+++ b/portfolio_views/public_corporate_profile.html
@@ -16,6 +16,9 @@
             <div class="card profile-header">
                 <div class="profile-banner">
                     <img src="images/coverphoto.jpg" alt="Profile Banner">
+                    <div class="banner-upload-icon">
+                        <i class="fas fa-camera"></i>
+                    </div>
                 </div>
                 <div class="profile-info-top">
                     <img src="images/profile.jpg" alt="David James" class="profile-picture">                    
