--- a/fun_labs/key_features_knowledge_check.html
+++ b/fun_labs/key_features_knowledge_check.html
@@ -113,7 +113,7 @@
             <main class="lesson-main-content">
                 <div class="quiz-content">
                     <div class="quiz-title">
-                        <h1><i class="fas fa-question-circle"></i> Key Features Knowledge Check</h1>
+                        <h1> Key Features Knowledge Check</h1>
                         <p>Test your understanding of Archivehubs' core features and functionalities</p>
                     </div>
 
