--- a/fun_labs/archive_learning_assessment.html
+++ b/fun_labs/archive_learning_assessment.html
@@ -34,11 +34,10 @@
             <!-- Left Sidebar - Lesson Navigation -->
             <aside class="lesson-sidebar">
                 <div class="sidebar-header">
-                    <h2>Lesson</h2>
+                    <h2>Overview of Archivehubs</h2>
                     <i class="fas fa-times sidebar-close"></i>
                 </div>
                 <div class="sidebar-lesson-details">
-                    <h3>Archivehubs Fundamentals</h3>
                     <div class="sidebar-lesson-info">
                         <div class="info-item">
                             <i class="far fa-clock info-icon"></i>
@@ -53,27 +52,27 @@
                             <span class="badge badge-basic">Basic</span>
                         </div>
                     </div>
-                    <button class="sidebar-lesson-start-btn" onclick="window.location.href='overview_purpose.html'">Start</button>
+                    <!-- Progress Bar -->
+                    <div class="lesson-progress-bar" style="margin: 18px 0 6px 0;">
+                        <div style="background: #eee; border-radius: 8px; height: 10px; width: 100%;">
+                            <div style="background: #4267B2; width: 17%; height: 10px; border-radius: 8px;"></div>
+                        </div>
+                        <div style="font-size: 13px; color: #333; margin-top: 4px; text-align: left;">17% Complete 2 of 12 Lessons</div>
+                    </div>
                 </div>
-                                <ul class="lesson-list">
-                    <li class="lesson-list-item"><a href="archive_learning_2.html"><span class="lesson-title">Introduction to Archivehubs</span> <i class="fas fa-check-circle lesson-status-icon"></i></a></li>
-                    <li class="lesson-list-item active"><a href="archive_learning_assessment.html"><span class="lesson-title">Pre-Course Self-Assessment (Optional)</span></a></li>
-                    <li class="lesson-list-item has-submenu">
-                        <a href="" class="submenu-toggle">
-                            <span class="lesson-title">Overview of Archivehubs</span> 
-                            <i class="fas fa-chevron-down submenu-icon"></i>
-                        </a>
-                        <ul class="submenu">
+                <ul class="lesson-list">
+                    <li class="lesson-list-item active"><a href="archive_learning_2.html"><span class="lesson-title">Introduction</span></a></li>
+                    <li class="lesson-list-item"><a href="archive_learning_assessment.html"><span class="lesson-title">Pre-Course Self-Assessment (Optional)</span></a></li>
+                    <li class="lesson-list-item has-submenu expanded">
+                        <a href="#" class="submenu-toggle"><span class="lesson-title">Overview of Archivehubs</span> <i class="fas fa-chevron-down submenu-icon"></i></a>
+                        <ul class="submenu" style="display: block;">
                             <li class="submenu-item"><a href="overview_purpose.html"><span class="lesson-title">Purpose</span></a></li>
                             <li class="submenu-item"><a href="overview_benefits.html"><span class="lesson-title">Benefits</span></a></li>
                             <li class="submenu-item"><a href="quiz_question_1.html"><span class="lesson-title">Knowledge Check</span></a></li>
                         </ul>
                     </li>
                     <li class="lesson-list-item has-submenu">
-                        <a href="" class="submenu-toggle">
-                            <span class="lesson-title">Key Features and Functionalities of Archivehubs</span> 
-                            <i class="fas fa-chevron-down submenu-icon"></i>
-                        </a>
+                        <a href="#" class="submenu-toggle"><span class="lesson-title">Key Features and Functionalities of Archivehubs</span> <i class="fas fa-chevron-down submenu-icon"></i></a>
                         <ul class="submenu">
                             <li class="submenu-item"><a href="key_features_functionalities.html"><span class="lesson-title">Key Features and Functionalities</span></a></li>
                             <li class="submenu-item"><a href="talent_insight.html"><span class="lesson-title">Talent Insight: Job Search & Employment Opportunities</span></a></li>
@@ -81,10 +80,7 @@
                         </ul>
                     </li>
                     <li class="lesson-list-item has-submenu">
-                        <a href="" class="submenu-toggle">
-                            <span class="lesson-title">Understanding the User Dashboard on Archivehubs</span> 
-                            <i class="fas fa-chevron-down submenu-icon"></i>
-                        </a>
+                        <a href="#" class="submenu-toggle"><span class="lesson-title">Understanding the User Dashboard on Archivehubs</span> <i class="fas fa-chevron-down submenu-icon"></i></a>
                         <ul class="submenu">
                             <li class="submenu-item"><a href="dashboard_overview.html"><span class="lesson-title">Dashboard Overview</span></a></li>
                             <li class="submenu-item"><a href="navigation_menu.html"><span class="lesson-title">Navigation Menu</span></a></li>
@@ -94,10 +90,7 @@
                         </ul>
                     </li>
                     <li class="lesson-list-item has-submenu">
-                        <a href="" class="submenu-toggle">
-                            <span class="lesson-title">Navigating the Platform</span> 
-                            <i class="fas fa-chevron-down submenu-icon"></i>
-                        </a>
+                        <a href="#" class="submenu-toggle"><span class="lesson-title">Navigating the Platform</span> <i class="fas fa-chevron-down submenu-icon"></i></a>
                         <ul class="submenu">
                             <li class="submenu-item"><a href="getting_started.html"><span class="lesson-title">Getting Started with Archivehubs</span></a></li>
                             <li class="submenu-item"><a href="exploring_feeds.html"><span class="lesson-title">Exploring Feeds</span></a></li>
@@ -105,8 +98,8 @@
                             <li class="submenu-item"><a href="navigating_knowledge_check.html"><span class="lesson-title">Knowledge Check</span></a></li>
                         </ul>
                     </li>
-                    <li class="lesson-list-item"><a href="course_review.html"><span class="lesson-title">Course Review</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
-                </ul>                    
+                    <li class="lesson-list-item"><a href="course_review.html"><span class="lesson-title">Course Review</span></a></li>
+                </ul>
             </aside>
 
             <!-- Main Content Area -->
